--- a/create.html
+++ b/create.html
@@ -1556,6 +1556,13 @@
         }
 
         window.onload = function() {
+        // ── MOBILE REDIRECT: send touch devices to create-mobile.html ──
+        var isMobile = /Android|iPhone|iPad|iPod|Mobile/i.test(navigator.userAgent) || window.innerWidth <= 768;
+        if (isMobile) {
+            // edit_comic_id is already in localStorage — create-mobile picks it up
+            location.replace('create-mobile.html');
+            return;
+        }
         // FPS counter
         if (localStorage.getItem('cc-show-fps') === 'true') {
             const fpsDisplay = document.createElement('div');
