--- a/squads.html
+++ b/squads.html
@@ -520,8 +520,7 @@
             team_name: name,
             description: document.getElementById('sq-desc').value.trim(),
             pfp: newPfp || null,
-            is_private: document.getElementById('sq-private').checked,
-            topics: getTopics()
+            is_private: document.getElementById('sq-private').checked
         }]);
         btn.innerText='Create Squad'; btn.disabled=false;
         if (error) { alert('Error: ' + error.message); return; }
