--- a/create.html
+++ b/create.html
@@ -2276,10 +2276,10 @@
         btn.disabled = true;
         const profile = JSON.parse(localStorage.getItem('user_profile') || '{"name":"Creator","handle":"user"}');
         const swipeDir = localStorage.getItem('cc-swipe-dir') || 'horizontal';
-        // Note: canvas_ratio is stored inside each frame's data, not as a top-level DB column
         const payload = {
             title, description: desc, tags, cover: finalCoverBase64,
-            data: frames, swipe_dir: swipeDir
+            data: frames, swipe_dir: swipeDir,
+            canvas_ratio: canvasRatio
         };
         let error;
         if (editingComicId) {
